# pymeilisearch

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  docker-compose.yml  index.html  pyproject.toml  robots.txt  script  sitemap.xml  tox.ini  versions.json
.github/: labeler.yml
.github/workflows/: ci_cd.yml  label.yml  nightly_docs_deploy..yml  nightly_long_url.yml
doc/: Makefile  make.bat
doc/source/: conf.py  contributing.rst  examples.rst  index.rst
doc/source/_autoapi_templates/: index.rst
doc/source/_static/: search.html  simple.html
doc/source/_static/css/: custom.css
doc/source/getting-started/: index.rst  installation.rst  installing-pymeilisearch.rst  meilisearch-backend.rst  meilisearch-images.rst
doc/source/user-guide/: cli-usage.rst  cli_usage.rst  index.rst  meilisearch-backend.rst  search-engine.rst  search_engine.rst  web-component.rst
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/config/vocabularies/ANSYS/: accept.txt
docker/: docker-compose.yml
requirements/: requirements_build.txt  requirements_doc.txt
script/: scrap_pyansys_docs.py
scripts/: default.json  index.html  scrap_test.py  test.py  use_tools.py
src/ansys/tools/meilisearch/: __init__.py  __main__.py  all-docs-index.py  all_doc_indexer.py  all_docs_index.py  all_document_indexer.py  all_pages.py  cli.py  client.py  create_indexes.py  get_pages.py  gh_pages_scraper.py  meilisearch_client.py  meilisearch_scraper.py  query_meilisearch.py  render_template.py  scrap_local.py  scrape_from_directory.py  scrape_sphinx_docs.py  scrape_url.py  scraper.py  scrapper.py  server.py  template_utils.py  utils.py
src/ansys/tools/meilisearch/json/: anchor.py  converter.py  default.py  url_parser.py
src/ansys/tools/meilisearch/templates/: __init__.py  default.json  pyaedt_sphinx.json  sphinx_pydata.json  utils.py
tests/: conftest.py  test_cli.py  test_create_indexes.py  test_gh_pages.py  test_meilisearch_client.py  test_metadata.py  test_scraper.py
version/: index.html
version/0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_sources/autoapi/: index.rst.txt
version/0.1/_sources/autoapi/ansys/tools/meilisearch/: index.rst.txt
version/0.1/autoapi/: index.html
version/0.1/autoapi/ansys/tools/meilisearch/: index.html
version/0.1/autoapi/ansys/tools/meilisearch/all_doc_indexer/: announcement.html  index.html
version/0.1/autoapi/ansys/tools/meilisearch/client/: index.html
version/0.1/autoapi/ansys/tools/meilisearch/create_indexes/: index.html
version/0.1/autoapi/ansys/tools/meilisearch/get_pages/: index.html
version/0.1/autoapi/ansys/tools/meilisearch/scrapper/: index.html
version/0.1/autoapi/ansys/tools/meilisearch/templates/: index.html
version/0.1/autoapi/ansys/tools/meilisearch/utils/: index.html
version/0.2/: .buildinfo  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/_sources/: contributing.rst.txt
version/0.2/_sources/autoapi/ansys/tools/meilisearch/: index.rst.txt
version/0.2/_sources/getting-started/: meilisearch-images.rst.txt
version/0.2/_static/: search.html  simple.html
version/0.2/autoapi/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/__main__/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/all_doc_indexer/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/cli/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/client/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/create_indexes/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/get_pages/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/scrapper/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/server/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/templates/: index.html
version/0.2/autoapi/ansys/tools/meilisearch/utils/: index.html
version/0.2/getting-started/: index.html  installing-pymeilisearch.html  meilisearch-images.html
version/0.2/user-guide/: cli-usage.html  index.html  web-component.html
version/0.3/: .buildinfo  examples.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
version/0.3/_sources/autoapi/ansys/tools/meilisearch/: index.rst.txt
version/0.3/autoapi/: index.html
version/0.3/autoapi/ansys/tools/meilisearch/: index.html
version/0.3/autoapi/ansys/tools/meilisearch/all_doc_indexer/: index.html
version/0.3/autoapi/ansys/tools/meilisearch/cli/: index.html
version/0.3/autoapi/ansys/tools/meilisearch/create_indexes/: index.html
version/0.3/autoapi/ansys/tools/meilisearch/get_pages/: index.html
version/0.3/autoapi/ansys/tools/meilisearch/scraper/: index.html
version/0.3/getting-started/: index.html  meilisearch-images.html
version/0.3/user-guide/: cli-usage.html  index.html
version/dev/: .buildinfo  contributing.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/autoapi/: index.rst.txt
version/dev/_static/: simple.html
version/dev/autoapi/: index.html
version/dev/autoapi/ansys/tools/meilisearch/: index.html
version/dev/getting-started/: index.html  installing-pymeilisearch.html  meilisearch-images.html
version/dev/user-guide/: cli-usage.html  index.html  web-component.html
version/stable/: .buildinfo  contributing.html  examples.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/_sources/: index.rst.txt
version/stable/_sources/getting-started/: installing-pymeilisearch.rst.txt
version/stable/_sources/user-guide/: cli-usage.rst.txt
version/stable/_static/: config.json
version/stable/autoapi/: index.html
version/stable/autoapi/ansys/tools/meilisearch/: index.html
version/stable/getting-started/: index.html  installing-pymeilisearch.html  meilisearch-images.html
version/stable/user-guide/: index.html  web-component.html
(+62 files in other folders)
