[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-tools-meilisearch"
version = "0.1.5"
description = "A python wrapper for ansys tools meilisearch"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >=4.0",
    "PyGithub >=1.58.0",
    "jinja2 >=3.1.2",
    "meilisearch >=0.24.0",
]

[project.optional-dependencies]

tests = [
    "pytest==7.2.2",
    "pytest-cov==4.0.0"
]
doc = [
    "ansys-sphinx-theme==0.9.5",
    "numpydoc==1.5.0",
    "Sphinx==5.1.1",                       
    "sphinx-autoapi==2.0.1",
    "meilisearch==0.24.0",   
    "sphinx-copybutton==0.5.1",
    "sphinx-notfound-page==0.8.3",
]

[tool.flit.module]
name = "ansys.tools.meilisearch"

[project.urls]
Source = "https://github.com/ansys/ansys-tools-meilisearch"
Tracker = "https://github.com/ansys/ansys-tools-meilisearch/issues"
Homepage = "https://github.com/ansys/ansys-tools-meilisearch"


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools"]

[tool.coverage.report]
show_missing = true
