[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pymeilisearch"
version = "0.2.2"
description = " A Python library for effortless indexing and searching of documentation using MeiliSearch."
readme = "README.rst"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys Core Team", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata>=4.0",
    "PyGithub>=1.58.0",
    "jinja2>=3.1.2",
    "meilisearch>=0.24.0",
    "click>=8",
    "pymeilisearch-scraper==0.1.1",
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "docker==6.1.3",
]
doc = [
    "ansys-sphinx-theme==0.10.0",
    "numpydoc==1.5.0",
    "Sphinx==6.2.1",
    "sphinx-design==0.5.0",
    "sphinx-jinja==2.0.2",
    "sphinx-autoapi==2.1.1",
    "meilisearch==0.28.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==0.8.3",
    "sphinx-jinja==2.0.2",
]

[tool.flit.module]
name = "ansys.tools.meilisearch"

[project.scripts]
pymeilisearch = "ansys.tools.meilisearch.cli:main"

[project.urls]
Source = "https://github.com/ansys/pymeilisearch"
Tracker = "https://github.com/ansys/pymeilisearch/issues"
Discussions = "https://github.com/ansys/pymeilisearch/discussions"
Releases = "https://github.com/ansys/pymeilisearch/releases"
Homepage = "https://github.com/ansys/pymeilisearch"
Documentation = "https://pymeilisearch.docs.ansys.com"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools.meilisearch"]

[tool.coverage.report]
show_missing = true
