[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pymeilisearch"
version = "0.3.dev0"
description = " A Python library for effortless indexing and searching of documentation using MeiliSearch."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys Core Team", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata>=4.0",
    "PyGithub>=1.58.0",
    "jinja2>=3.1.2",
    "meilisearch>=0.24.0",
    "click>=8",
    "pymeilisearch-scraper>=0.2.3,<3",
    "pyOpenSSL>=23.2.0",
    "cryptography>=41.0.4",
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "docker==7.1.0",
]
doc = [
    "ansys-sphinx-theme==1.0.2",
    "numpydoc==1.7.0",
    "Sphinx==8.0.2",
    "sphinx-design==0.6.1",
    "sphinx-jinja==2.0.2",
    "sphinx-autoapi==3.2.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.0.4",
    "sphinx-jinja==2.0.2",
]

[tool.flit.module]
name = "ansys.tools.meilisearch"

[project.scripts]
pymeilisearch = "ansys.tools.meilisearch.cli:main"

[project.urls]
Source = "https://github.com/ansys/pymeilisearch"
Tracker = "https://github.com/ansys/pymeilisearch/issues"
Discussions = "https://github.com/ansys/pymeilisearch/discussions"
Releases = "https://github.com/ansys/pymeilisearch/releases"
Homepage = "https://github.com/ansys/pymeilisearch"
Documentation = "https://pymeilisearch.docs.ansys.com"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools.meilisearch"]

[tool.coverage.report]
show_missing = true
